# mkpfs-tui

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  mkpfs-tui.spec  pyproject.toml  run-tests.sh
.github/workflows/: ci.yml  release.yml
mkpfs_tui/: __init__.py  __main__.py  app.py  config.py  format.py  messages.py  mkpfs_runner.py  models.py  progress_parser.py  styles.tcss
mkpfs_tui/deploy/: __init__.py  cli.py  deployer.py  ftp.py
mkpfs_tui/exfat/: __init__.py  builder.py  cli.py  naming.py  sizing.py  tools.py
mkpfs_tui/screens/: about.py  build_exfat.py  confirm.py  deploy.py  inspect.py  pack.py  picker.py  read_view.py  tree.py  unpack.py  verify.py
mkpfs_tui/widgets/: path_field.py  result_panel.py  sidebar.py
tests/: test_about_screen.py  test_app_shell.py  test_browse_wiring.py  test_build_exfat_screen.py  test_config.py  test_confirm.py  test_deploy_cli.py  test_deploy_ftp.py  test_deploy_screen.py  test_deployer.py  test_exfat_builder.py  test_exfat_cli.py  test_exfat_naming.py  test_exfat_sizing.py  test_exfat_tools.py  test_format.py  test_frozen.py  test_inspect_screen.py  test_messages.py  test_mkpfs_contract.py  test_mkpfs_runner.py  test_models.py  test_pack_runner.py  test_pack_screen.py  test_path_field.py  test_picker_modal.py  test_progress_parser.py  test_read_view.py  test_result_panel.py  test_sidebar.py  test_tree_screen.py  test_unpack_screen.py  test_verify_screen.py
