[project]
name = "mkpfs-tui"
description = "A Textual terminal UI for mkpfs — pack, inspect, verify, tree, and unpack PlayStation PFS images."
readme = "README.md"
authors = [{ name = "cvarandas", email = "cvarandas@gmail.com" }]
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
keywords = ["playstation", "pfs", "tui", "textual", "mkpfs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: Utilities",
]
dynamic = ["version"]
dependencies = [
    "mkpfs>=0.0.5,<0.1.0",
    "textual>=0.86",
]

[project.scripts]
mkpfs-tui = "mkpfs_tui.app:main"

[project.urls]
Homepage = "https://github.com/ClaudioVarandas/mkpfs-tui"
Repository = "https://github.com/ClaudioVarandas/mkpfs-tui"
Issues = "https://github.com/ClaudioVarandas/mkpfs-tui/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["mkpfs_tui"]

[dependency-groups]
dev = [
    "textual-dev>=1.5.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.12",
    "pyinstaller>=6.0",
    "build>=1.2.2",
    "pre-commit>=3.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=mkpfs_tui --cov-report=term-missing"

[tool.coverage.run]
source = ["mkpfs_tui"]
relative_files = true
branch = false

[tool.ruff]
line-length = 119
target-version = "py311"
exclude = [".git", ".ruff_cache", ".venv", ".vscode", "tmp"]

[tool.ruff.lint]
preview = true
select = ["ANN", "B", "D", "E", "F", "I", "PTH", "RUF", "SIM", "UP", "W"]
ignore = [
    "ANN401", "B007", "B008", "B905", "D1", "D203", "D205",
    "D212", "D213", "D400", "PTH123", "RUF002", "RUF003", "SIM108",
]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
